syntax = "proto3";

package execenv;

option go_package = "github.com/SpaceSlow/execenv/internal/proto";

enum MType {
  UNSPECIFIED = 0;
  COUNTER = 1;
  GAUGE = 2;
}

message Metric {
  string id = 1;
  MType mType = 2;
  double value = 3;
  int64 delta = 4;
}

message AddMetricRequest {
  Metric metric = 1;
}

message AddMetricResponse {
  string error = 1;
}

message BatchAddMetricsRequest {
  repeated Metric metrics = 1;
}

message BatchAddMetricsResponse {
  string error = 1;
}

message GetMetricRequest {
  string id = 1;
  MType mType = 2;
}

message GetMetricResponse {
  Metric metric = 1;
  string error = 2;
}

message ListMetricsRequest {
}

message ListMetricsResponse {
  repeated Metric metrics = 1;
  string error = 2;
}

service MetricService {
  rpc AddMetric(AddMetricRequest) returns (AddMetricResponse);
  rpc BatchAddMetrics(BatchAddMetricsRequest) returns (BatchAddMetricsResponse);
  rpc GetMetric(GetMetricRequest) returns (GetMetricResponse);
  rpc ListMetrics(ListMetricsRequest) returns (ListMetricsResponse);
}
